--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^8.6.0",
     "next": "10.2.0",
     "next-seo": "^4.24.0",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.5.2",
