--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "datocms-client": "^3.4.9",
     "firebase": "^8.6.0",
     "next": "10.2.0",
+    "next-pwa": "^5.3.1",
     "next-seo": "^4.24.0",
     "notistack": "^1.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.5.2",
-    "react-select": "^4.3.1",
     "react-stripe-checkout": "^2.6.3",
     "sass": "^1.38.2"
   },
@@ -39,7 +39,6 @@
     "babel-jest": "^27.0.6",
     "cypress": "^8.1.0",
     "eslint": "^7.32.0",
-    "faker": "^5.5.3",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "start-server-and-test": "^1.13.1",
