--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,55 @@
 {
   "name": "Ecommerce App",
+  "theme_color": "#282827",
+  "background_color": "#f7f6f6",
+  "display": "fullscreen",
+  "scope": "/",
+  "start_url": "/",
+  "short_name": "Ecommerce",
+  "description": "Ecommerce",
+  "prefer_related_applications": false,
   "icons": [
     {
       "src": "/favicon-48x48.png",
       "sizes": "48x48",
       "type": "image/png",
-      "density": "1.0"
+      "density": "1.0",
+      "purpose": "any maskable"
     },
     {
       "src": "/tile70x70.png",
       "sizes": "70x70",
       "type": "image/png",
-      "density": "1.5"
+      "density": "1.5",
+      "purpose": "any maskable"
     },
     {
       "src": "/favicon-96x96.png",
       "sizes": "96x96",
       "type": "image/png",
-      "density": "2.0"
+      "density": "2.0",
+      "purpose": "any maskable"
     },
     {
       "src": "/favicon-128x128.png",
       "sizes": "128x128",
       "type": "image/png",
-      "density": "3.0"
+      "density": "3.0",
+      "purpose": "any maskable"
     },
     {
       "src": "/pwa-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "density": "4.0"
+      "density": "4.0",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "density": "4.0",
+      "purpose": "any maskable"
     }
   ]
 }
