pwa workers and screen fix

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Ecommerce App",
   "theme_color": "#282827",
   "background_color": "#f7f6f6",
-  "display": "fullscreen",
+  "display": "standalone",
   "scope": "/",
   "start_url": "/",
   "short_name": "Ecommerce",
