--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#workers
+sw.js
+workbox*
+
+
 # dependencies
 /node_modules
 /.pnp
@@ -27,6 +32,7 @@ yarn-error.log*
 # local env files
 .env.local
 .env.development.local
+.env.test
 .env.test.local
 .env.production.local
 
